--- a/index.html
+++ b/index.html
@@ -33,6 +33,27 @@
         </div>
       </div>
       <!-- /.row -->
+      <div class="row">
+        <div class="col-5">
+          <h1 class="hero-title">       Найдите удаленную работу вашей мечты          </h1>
+          <p class="hero-text">Создайте резюме или отправьте отклик на вакансию в компании с мировым именем и работайте по свободному графику</p>
+        
+        <div class="input-group">
+          <input type="text" class="input" placeholder="Начните поиск">
+          <button class="button button-primary">
+            <img src="img/search-icon.svg" alt="icon: search">
+            <span class="button-text">Искать вакансии</span>
+          </button>
+        </div>
+        <!-- /.input-group -->
+      </div>
+        <!-- /.col-5 -->
+        <div class="col-6 offset-1">
+          <img src="img/hero-image.svg" alt="image: People with laptops" class="hero-image">
+        </div>
+        <!-- /.col-6 offset-1 -->
+      </div>
+      <!-- /.row -->
     </div>
     <!-- /.container -->
   </header>
